fixed loading flickering with animation in intro

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -57,6 +57,7 @@
 
 
 .header__intro {
+    opacity: 0;
     width: 100%;
     text-align: center;
     
